tests/baselines/reference/initializedDestructuringAssignmentTypes.errors.txt
tests/cases/compiler/initializedDestructuringAssignmentTypes.ts(1,7): error TS2461: Type 'RegExpMatchArray | undefined[]' is not an array type.


==== tests/cases/compiler/initializedDestructuringAssignmentTypes.ts (1 errors) ====
    const [, a = ''] = ''.match('') || [];
          ~~~~~~~~~~
!!! error TS2461: Type 'RegExpMatchArray | undefined[]' is not an array type.
    
    a.toFixed()